@@ -30,6 +30,8 @@
           (http://www.packetfence.org/mantis/view.php?id=624)
         fixed list of dashboard widgets
           (http://www.packetfence.org/mantis/view.php?id=625)
+        web admin GUI: fixed proxies configuration help
+          (http://www.packetfence.org/mantis/view.php?id=626)
 
 1.8.1
         authorized @ as first symbol in password
